    by Marcus Stollsteimer
  * RDoc now ignores methods defined on constants instead of creating a fake
    module.  Bug #163 by Zachary Scott.
  * Fixed ChangeLog parsing for FFI gem.  Bug #165 by Zachary Scott.
  * RDoc now links \#=== methods.  Bug #164 by Zachary Scott.
  * Allow [] following argument names for TomDoc.  Bug #167 by Ellis Berner.

=== 4.0.0.preview2.1 / 2012-12-14

* Minor enhancements
  * Added --page-dir option to give pretty names for a FAQ, guides, or other
    documentation you write that is not stored in the project root.  For
    example, with the following layout:

      README.txt
      guides/syntax.txt
      guides/conversion.txt

    Running `rdoc --page-dir guides` will make the files in "guides" appear to
    be at the top level of the project.  This means they will appear to exist
    at the top level in HTML output and you can access them with
    `ri your_gem:syntax` and `ri your_gem:conversion`.

* Bug fixes
  * Fully qualified names for constants declared from the top level are now
    attached to their class or module properly.
  * Fixed table of contents display in HTML output for classes and modules.
  * Incremental ri builds of C files now work.  C variable names from previous
    runs are now saved between runs.

=== 4.0.0.preview2 / 2012-12-01

* Breaking changes
  * The default output encoding for RDoc is now UTF-8.  Previously RDoc used
    the default external encoding which was determined from your locale.
    Issue #106 by Justin Baker.
  * RDoc::RI::Store is now RDoc::Store so ri data generated by RDoc 4 cannot
    be read by earlier versions of RDoc.  RDoc::RI::Store exists as an alias
    of RDoc::Store so ri data from older versions can still be read.
    RDoc::RI::Store will be removed in RDoc 5.

    Tests that create RDoc::CodeObjects on the fly without wiring them into
    the documentation tree (did not use add_class, add_method, etc.) must be